--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -3,6 +3,7 @@ services:
   pl:
     build:
       context: .
+      dockerfile: Dockerfile-alternate
     image: prairielearn/prairielearn:local
     ports:
       - 3000:3000
